--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	  src="https://code.jquery.com/jquery-3.2.1.js"
 	  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
 	  crossorigin="anonymous"></script>
-	  
+	 b
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </head>
@@ -38,31 +38,31 @@
 							<form name="soccerQuiz" onsubmit="return submitAnswers()">
 							<p>1. Which nation has won the most World Cups?</p>
 								<input type="radio" name="Q1" value="a" id="Q1a"><span>Mexico</span>
-								<input type="radio" name="Q1" value="b" id="Q1a"><span>Germany</span>
-								<input type="radio" name="Q1" value="c" id="Q1a"><span>Brazil</span>
-								<input type="radio" name="Q1" value="d" id="Q1a"><span>Spain</span>
+								<input type="radio" name="Q1" value="b" id="Q1b"><span>Germany</span>
+								<input type="radio" name="Q1" value="c" id="Q1c"><span>Brazil</span>
+								<input type="radio" name="Q1" value="d" id="Q1d"><span>Spain</span>
 							<p>2. Which soccer club has won the most Champions League titles?</p>
 								<input type="radio" name="Q2" value="a" id="Q2a"><span>Real Madrid</span>
-								<input type="radio" name="Q2" value="b" id="Q2a"><span>Manchester United</span>
-								<input type="radio" name="Q2" value="c" id="Q2a"><span>Juventus</span>
-								<input type="radio" name="Q2" value="d" id="Q2a"><span>Barcelona</span>
+								<input type="radio" name="Q2" value="b" id="Q2b"><span>Manchester United</span>
+								<input type="radio" name="Q2" value="c" id="Q2c"><span>Juventus</span>
+								<input type="radio" name="Q2" value="d" id="Q2d"><span>Barcelona</span>
 							<p>3. Who is currently the most expensive transfer for a footballer</p>
 								<input type="radio" name="Q3" value="a" id="Q3a"><span>Paul Pogba</span>
-								<input type="radio" name="Q3" value="b" id="Q3a"><span>Lionel Messi</span>
-								<input type="radio" name="Q3" value="c" id="Q3a"><span>Cristiano Ronaldo</span>
-								<input type="radio" name="Q3" value="d" id="Q3a"><span>Wayne Rooney</span>
+								<input type="radio" name="Q3" value="b" id="Q3b"><span>Lionel Messi</span>
+								<input type="radio" name="Q3" value="c" id="Q3c"><span>Cristiano Ronaldo</span>
+								<input type="radio" name="Q3" value="d" id="Q3d"><span>Wayne Rooney</span>
 							<p>4. Which footballer has won the most Balon d'Or?</p>
 								<input type="radio" name="Q4" value="a" id="Q4a"><span>Lionel Messi</span>
-								<input type="radio" name="Q4" value="b" id="Q4a"><span>Cristiano Ronaldo</span>
-								<input type="radio" name="Q4" value="c" id="Q4a"><span>Ronaldinho</span>
-								<input type="radio" name="Q4" value="d" id="Q4a"><span>Ronaldo</span>
+								<input type="radio" name="Q4" value="b" id="Q4b"><span>Cristiano Ronaldo</span>
+								<input type="radio" name="Q4" value="c" id="Q4c"><span>Ronaldinho</span>
+								<input type="radio" name="Q4" value="d" id="Q4d"><span>Ronaldo</span>
 							<p>5. According to Forbes, which football club has the highest value?</p>
 								<input type="radio" name="Q5" value="a" id="Q5a"><span>Liverpool</span>
-								<input type="radio" name="Q5" value="b" id="Q5a"><span>Barcelona</span>
-								<input type="radio" name="Q5" value="c" id="Q5a"><span>Real Madrid</span>
-								<input type="radio" name="Q5" value="d" id="Q5a"><span>Manchester United</span>
+								<input type="radio" name="Q5" value="b" id="Q5b"><span>Barcelona</span>
+								<input type="radio" name="Q5" value="c" id="Q5c"><span>Real Madrid</span>
+								<input type="radio" name="Q5" value="d" id="Q5d"><span>Manchester United</span>
 							<br>
-							<br>
+							<brd
 							<input type="submit" value="Submit">
 						</div>
 					</div>
