changes to ids and some dom logic

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-55555555555555555<!DOCTYPE html>
+<!DOCTYPE html>
 <hmml lang= "en-us">
 <head>
 	<meta charset="utf-8">
@@ -26,8 +26,8 @@
 		</div>
 
 		<div class="row">
-			<h2 id=correctAn></h2>
-			<h2 id="wrongAn"></h2>
+			<h2>Correct: <span  id="correctAn"></span></h2>
+			<h2>Wrong: <span id="wrongAn"></span></h2>
 		</div>
 
 		<div class="row">
@@ -62,7 +62,7 @@
 								<input type="radio" name="Q5" value="c" id="Q5c"><span>Real Madrid</span>
 								<input type="radio" name="Q5" value="d" id="Q5d"><span>Manchester United</span>
 							<br>
-							<brd
+							<br>
 							<input type="submit" value="Submit">
 						</div>
 					</div>
